--- a/MacSVG Plugin Projects/macSVG Plugins/AnimateMotionElementEditor/AnimateMotionElementEditor/en.lproj/AnimateMotionElementEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/AnimateMotionElementEditor/AnimateMotionElementEditor/en.lproj/AnimateMotionElementEditor.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -31,16 +31,16 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="Sse-dA-blb" customClass="FlippedView">
-            <rect key="frame" x="0.0" y="0.0" width="270" height="293"/>
+        <customView misplaced="YES" id="Sse-dA-blb" customClass="FlippedView">
+            <rect key="frame" x="0.0" y="0.0" width="270" height="274"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
             <subviews>
-                <customView id="hp8-q9-np6">
-                    <rect key="frame" x="0.0" y="0.0" width="270" height="293"/>
+                <customView misplaced="YES" id="hp8-q9-np6">
+                    <rect key="frame" x="0.0" y="0.0" width="270" height="274"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="LU0-Jz-N3d">
-                            <rect key="frame" x="18" y="235" width="34" height="14"/>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="LU0-Jz-N3d">
+                            <rect key="frame" x="18" y="234" width="34" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="begin" id="bMq-nU-Qzr">
                                 <font key="font" metaFont="smallSystem"/>
@@ -48,8 +48,8 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <button verticalHuggingPriority="750" id="g4T-E2-1Qt">
-                            <rect key="frame" x="15" y="178" width="240" height="28"/>
+                        <button verticalHuggingPriority="750" misplaced="YES" id="g4T-E2-1Qt">
+                            <rect key="frame" x="15" y="177" width="240" height="28"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="push" title="Edit keyTimes, keySplines, keyPoints" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="GNG-22-yqv">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -59,8 +59,8 @@
                                 <action selector="keyValuesButtonAction:" target="-2" id="a5j-FR-dUn"/>
                             </connections>
                         </button>
-                        <textField verticalHuggingPriority="750" id="XC1-wU-Wg8">
-                            <rect key="frame" x="46" y="209" width="50" height="19"/>
+                        <textField verticalHuggingPriority="750" misplaced="YES" id="XC1-wU-Wg8">
+                            <rect key="frame" x="46" y="208" width="50" height="19"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="5s" drawsBackground="YES" id="GgX-Ie-egW">
                                 <font key="font" metaFont="smallSystem"/>
@@ -71,8 +71,8 @@
                                 <outlet property="nextKeyView" destination="0gP-zu-vLD" id="JMm-N0-J4n"/>
                             </connections>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Xtl-NU-4I7">
-                            <rect key="frame" x="100" y="210" width="70" height="14"/>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="Xtl-NU-4I7">
+                            <rect key="frame" x="100" y="209" width="70" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="repeatCount" id="v2b-bc-DdF">
                                 <font key="font" metaFont="smallSystem"/>
@@ -80,8 +80,8 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <comboBox verticalHuggingPriority="750" id="0gP-zu-vLD">
-                            <rect key="frame" x="176" y="206" width="77" height="22"/>
+                        <comboBox verticalHuggingPriority="750" misplaced="YES" id="0gP-zu-vLD">
+                            <rect key="frame" x="176" y="205" width="77" height="22"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <comboBoxCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="indefinite" drawsBackground="YES" completes="NO" usesDataSource="YES" numberOfVisibleItems="5" id="JQM-gI-YzD">
                                 <font key="font" metaFont="smallSystem"/>
@@ -93,8 +93,8 @@
                                 <outlet property="delegate" destination="-2" id="urI-GE-zMk"/>
                             </connections>
                         </comboBox>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="vYh-qt-ocY">
-                            <rect key="frame" x="18" y="257" width="55" height="14"/>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="vYh-qt-ocY">
+                            <rect key="frame" x="18" y="256" width="55" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="calcMode" id="k4R-rj-XhF">
                                 <font key="font" metaFont="smallSystem"/>
@@ -102,8 +102,8 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="dhn-vw-Zlt">
-                            <rect key="frame" x="18" y="211" width="22" height="14"/>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="dhn-vw-Zlt">
+                            <rect key="frame" x="18" y="210" width="22" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="dur" id="N5C-TR-cex">
                                 <font key="font" metaFont="smallSystem"/>
@@ -111,8 +111,8 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField verticalHuggingPriority="750" id="XbQ-Q0-iw9">
-                            <rect key="frame" x="58" y="232" width="192" height="19"/>
+                        <textField verticalHuggingPriority="750" misplaced="YES" id="XbQ-Q0-iw9">
+                            <rect key="frame" x="58" y="231" width="192" height="19"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="0s" drawsBackground="YES" id="9Dg-fH-Jq3">
                                 <font key="font" metaFont="smallSystem"/>
@@ -123,8 +123,8 @@
                                 <outlet property="nextKeyView" destination="XC1-wU-Wg8" id="0PC-l8-P6U"/>
                             </connections>
                         </textField>
-                        <popUpButton verticalHuggingPriority="750" id="Mos-K2-oZu">
-                            <rect key="frame" x="84" y="252" width="77" height="22"/>
+                        <popUpButton verticalHuggingPriority="750" misplaced="YES" id="Mos-K2-oZu">
+                            <rect key="frame" x="84" y="251" width="77" height="22"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="iGR-Pc-PLE" id="A7y-Ch-1np">
                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -140,8 +140,8 @@
                                 </menu>
                             </popUpButtonCell>
                         </popUpButton>
-                        <tabView controlSize="small" id="jR4-Sz-YZv">
-                            <rect key="frame" x="13" y="17" width="244" height="165"/>
+                        <tabView misplaced="YES" controlSize="small" id="jR4-Sz-YZv">
+                            <rect key="frame" x="13" y="16" width="244" height="165"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <tabViewItems>
                                 <tabViewItem label="from/to" identifier="1" id="Dco-e7-DnC">
@@ -456,8 +456,8 @@
                                 </tabViewItem>
                             </tabViewItems>
                         </tabView>
-                        <button verticalHuggingPriority="750" id="ems-sF-VHP">
-                            <rect key="frame" x="89" y="2" width="62" height="28"/>
+                        <button verticalHuggingPriority="750" misplaced="YES" id="ems-sF-VHP">
+                            <rect key="frame" x="89" y="1" width="62" height="28"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="y5u-tZ-flB">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -470,8 +470,8 @@ Gw
                                 <action selector="cancelButtonAction:" target="-2" id="CFr-q4-cOQ"/>
                             </connections>
                         </button>
-                        <button verticalHuggingPriority="750" id="hPn-00-DGD">
-                            <rect key="frame" x="149" y="2" width="106" height="28"/>
+                        <button verticalHuggingPriority="750" misplaced="YES" id="hPn-00-DGD">
+                            <rect key="frame" x="149" y="1" width="106" height="28"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="push" title="Apply Changes" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Sqa-Tl-CR2">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -484,7 +484,7 @@ Gw
                     </subviews>
                 </customView>
             </subviews>
-            <point key="canvasLocation" x="215" y="155.5"/>
+            <point key="canvasLocation" x="215" y="146"/>
         </customView>
         <viewController id="Xxv-wS-MmX" userLabel="Popover View Controller" customClass="KeyValuesPopoverViewController">
             <connections>
@@ -595,7 +595,7 @@ Gw
                         <autoresizingMask key="autoresizingMask"/>
                     </tableHeaderView>
                 </scrollView>
-                <button id="ppW-nl-u7w">
+                <button hidden="YES" id="ppW-nl-u7w">
                     <rect key="frame" x="220" y="19" width="32" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="square" title="+" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="WA7-tg-ijh">
@@ -606,7 +606,7 @@ Gw
                         <action selector="addRowButtonAction:" target="Xxv-wS-MmX" id="Du5-p5-N4b"/>
                     </connections>
                 </button>
-                <button id="A0H-X9-M6b">
+                <button hidden="YES" id="A0H-X9-M6b">
                     <rect key="frame" x="251" y="19" width="32" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="square" title="-" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="A6y-hj-mwy">
